# mwave

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: sphinx.yml
docs/: conf.py  examples.rst  index.rst  numeric.rst  quickstart.rst  requirements.txt  symbolic.rst
docs/examples/: bloch_ham_integration.ipynb  geometries.ipynb  geometries.rst  integration.rst  sci.rst  single_bragg_matching.ipynb  systematic_studies.rst
docs/examples/systematics/: gen_precompute.ipynb  sci_diffraction_phase_calculation.ipynb  sci_transverse.ipynb
examples/: interpolation.ipynb  precomputing_bragg_pulses.ipynb  rbi_single_n.py  sci.py  sci_diffraction_phase_calculation.ipynb  sci_single_n.py  sci_transverse_motion_precomputed.ipynb  sig0.247.h5  simulating_a_momentum_distribution.ipynb  simulating_frequency_swept_processes.ipynb  single_bragg_dataset.h5  single_bragg_pulse_dataset_matching.ipynb
src/mwave/: geometry.py  integrate.py  interpolation.py  precompute.py  symbolic.py  xintegrate.py
src/mwave/templates/: ifr_codegen.pytemplate
tests/: test_interferometer.py
