[tool.poetry]
name = "mwave"
version = "0.3.0"
description = "A package for simulating atom interferometers."
authors = ["jc-roth <2797077+jc-roth@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = 'mwave', from ='src'}]

# Include data folder (disabled for now)
# include = [{path = 'mwave-data', format = ['sdist', 'wheel']}]

# Exclude incomplete modules
exclude = ['src/mwave/interferometer.py', 'src/mwave/interpolation.py', 'src/mwave/integrate.py', 'src/mwave/templates/*']

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.60.0"
numpy = "^1.26.4"
graphviz = "^0.20.3"
matplotlib = "^3.9.2"
scipy = "^1.13.1"
sympy = "^1.13.2"
tqdm = "^4.66.5"
jinja2 = "3.1.0"
h5py = "^3.13.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
nbsphinx = "^0.9.6"
pytest = "^8.3.4"
pyarmor = "^9.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
